--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"firebase": "^4.1.3",
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.45.1"
+		"react-native": "0.45.1",
+		"react-native-material-kit": "^0.4.1",
+		"react-native-vector-icons": "^4.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
