--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
 		"react-native-material-kit": "^0.4.1",
-		"react-native-vector-icons": "^4.2.0"
+		"react-native-vector-icons": "^4.2.0",
+		"react-redux": "^5.0.5",
+		"redux": "^3.7.1",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
 		"babel-preset-react-native": "2.0.0",
 		"jest": "20.0.4",
+		"react-native-debugger-open": "^0.3.11",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
 	"jest": {
